# rtsp_demo

./: CMakeLists.txt  Readme.md  build.sh  main.cpp  run.sh
ffmpeg/lib/: libavdevice.so.60.2.101  libavutil.so.58  libavutil.so.58.27.100  libswresample.so.4.11.100  libswscale.so.7  libswscale.so.7.4.100
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/: Media.cpp  Media.h
